--- a/public/student/dashboard.html
+++ b/public/student/dashboard.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/css/analytics-dashboard.css">
     <link rel="stylesheet" href="/css/loading-animations.css">
     <link rel="stylesheet" href="/css/ai-chat.css">
-    <link rel="stylesheet" href="/css/modern-chat.css">
+    <link rel="stylesheet" href="/css/modern-chat.css?v=2">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
@@ -26,9 +26,12 @@
     <!-- Sidebar -->
     <aside class="sidebar">
         <div class="sidebar-header">
-            <div class="logo-wrapper">
-                <div class="logo-icon">S</div>
-                <div class="logo-text">Sindhu</div>
+            <div class="logo-container">
+                <img src="/images/sidebar-logo.png" alt="Logo" class="logo-img logo-collapsed"
+                    style="height: 32px; width: auto;">
+                <img src="/images/sidebar-logo-full.png" alt="Logo" class="logo-img logo-expanded"
+                    style="height: 40px; width: auto; display: none;">
+                <div class="logo-text" style="display: none;">Sindhu</div>
             </div>
             <button id="sidebar-toggle" class="btn-icon">
                 <i class="ri-menu-line"></i>
@@ -70,11 +73,11 @@
         </nav>
 
         <div class="sidebar-footer">
-            <div class="user-profile-mini"
-                style="margin-bottom: 10px; padding: 10px; background: rgba(0,0,0,0.03); border-radius: 8px;">
-                <div style="font-size: 0.9rem; font-weight: 600;" id="user-name">Student</div>
-            </div>
-            <button class="btn btn-secondary btn-block" onclick="logout()">Logout</button>
+            <button class="nav-item" onclick="logout()"
+                style="width: 100%; text-align: left; background: none; border: none; font-family: inherit; font-size: inherit; color: inherit; cursor: pointer; display: flex; align-items: center; padding: 12px 15px;">
+                <i class="ri-logout-box-line"></i>
+                <span class="nav-text" style="margin-left: 10px;">Logout</span>
+            </button>
         </div>
     </aside>
 
@@ -86,7 +89,7 @@
         <div class="user-profile-dropdown">
             <div class="profile-trigger floating-btn">
                 <div class="avatar" id="header-avatar">S</div>
-                <span class="user-name" id="user-name">Student</span>
+                <span class="user-name" id="header-user-name">Student</span>
                 <i class="ri-arrow-down-s-line dropdown-arrow"></i>
             </div>
             <div class="dropdown-menu" id="profile-menu">
@@ -362,14 +365,14 @@
     <script src="/js/chart-config.js"></script>
     <script src="/js/loading-manager.js"></script>
     <script src="/js/cookie-consent.js"></script>
-    <script src="/js/study-buddy-section.js?v=12"></script>
+    <script src="/js/study-buddy-section.js?v=20"></script>
     <script src="/js/ai-study-buddy-button.js"></script>
-    <script src="/js/ai-chat.js"></script>
+    <script src="/js/ai-chat.js?v=1"></script>
     <!-- <script src="/js/ai-chat-interface.js"></script> File doesn't exist -->
     <script src="/js/conversation-accordion.js"></script>
     <script src="/js/resizable-chat.js"></script>
     <script src="/js/classroom/student-classroom.js"></script>
-    <script src="/js/student-dashboard.js?v=2"></script>
+    <script src="/js/student-dashboard.js?v=6"></script>
     <script>
         // Simple helper to toggle details pane (optionally used)
         window.toggleDetails = function () {
