feat: Modern Chat Details UI with Starred Messages, Media Viewer & Notifications
✨ Major Features:
- Modern card-based chat details UI across all dashboards (Student/Professor/Admin)
- Starred messages with modal viewer and jump-to-message functionality
- Recent media grid viewer with full-size image modal
- Per-conversation notification toggle with localStorage persistence
- Custom 404 error page with animated gradient design

🎨 UI Improvements:
- Gradient icon backgrounds (purple for notifications, pink for starred)
- Better spacing, shadows, and rounded corners (16px radius)
- Hover animations with lift effect (translateY -2px)
- Centered profile section with bordered avatar and online status badge
- Professional typography with improved hierarchy

🔧 Technical:
- Event delegation with setTimeout for reliable handler attachment
- Local messages array updates when starring
- Cache busting with timestamps
- Smooth transitions (0.2s ease)
- Responsive grid layouts for media

📁 Files Modified:
- public/js/student-dashboard.js
- public/js/professor-dashboard.js
- public/js/admin-dashboard.js
- public/css/modern-chat.css
- public/404.html (new)
- public/*/dashboard.html (cache timestamps)
- README.md (comprehensive v3.0 documentation)

--- a/public/professor/dashboard.html
+++ b/public/professor/dashboard.html
@@ -565,8 +565,7 @@
 
     <!-- Use the external professor logic file -->
     <script src="/js/activity-heartbeat.js"></script>
-    <script src="/js/professor-dashboard-debug.js?v=2"></script>
-    <script src="/js/professor-dashboard.js?v=7"></script>
+    <script src="/js/admin-dashboard.js?t=1765646300"></script>
 
     <script>
         // Simple visual console helper
