--- a/public/student/dashboard.html
+++ b/public/student/dashboard.html
@@ -376,7 +376,7 @@
     <script src="/js/resizable-chat.js"></script>
     <script src="/js/classroom/student-classroom.js"></script>
     <script src="/js/activity-heartbeat.js"></script>
-    <script src="/js/student-dashboard.js?v=6"></script>
+    <script src="/js/student-dashboard.js?t=1765643793"></script>
     <script>
         // Simple helper to toggle details pane (optionally used)
         window.toggleDetails = function () {
