--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -391,7 +391,7 @@
     <!-- Socket.IO -->
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/activity-heartbeat.js"></script>
-    <script src="/js/admin-dashboard.js?v=2"></script>
+    <script src="/js/admin-dashboard.js?t=1765646300"></script>
     <script src="/js/message-notification.js"></script>
 </body>
 
